<resources>
    <string name="app_name">Game1</string>
    <string name="name_game">Карьерист</string>
    <string name="play">Играть</string>
    <string name="branches">Ветки</string>
    <string name="ch1">Вариант 1</string>
    <string name="ch2">Вариант 2</string>
    <string name="ch3">Вариант 3</string>
    <string name="begin">Сейчас у Вас начнется жизнь. Вы родились в небогатой семье в Москве. Мы пропустим детсадовский момент жизни и сразу начнем с интересного \n</string>
    <string name="situation1">Школа \n Время записи в школу и получения знаний на протяжении 11 лет! \n</string>
    <string name="ch11">1) Пойти в школу \n</string>
    <string name="ch12">2) Не ходить в школу \n</string>
    <string name="ch13">3) Учиться на дому \n</string>
    <string name="situation2">ВУЗ \n Вы отлично отучились 11 классов, осталось только выбрать будущее направление и успешно сдать ЕГЭ! \n</string>
    <string name="ch21">1) IT технологии \n</string>
    <string name="ch22">2) Экономический \n</string>
    <string name="ch23">3) Медициский \n</string>
    <string name="situation3">Подработка \n Вам предложили подрабатывать на курсах, но при этом есть риск снижения учебы и полного отсутствия свободного времени.. Что скажете? \n</string>
    <string name="ch31">1) Буду вести курсы \n</string>
    <string name="ch32">2) Нет, мне дорого личное время \n</string>
    <string name="ch33">3) Пожалуй, попробую, но это не точно \n</string>
    <string name="situation4">Окончание ВУЗа \n Вы успешно окончили ВУЗ, и вот какой вопрос: Найти работу или уже открыть свой бизнес? \n</string>
    <string name="ch41">1) Найти работу по специальности \n</string>
    <string name="ch42">2) Открыть свой бизнес \n</string>
    <string name="ch43">3) Жить за счет пенсии родителей \n</string>
    <string name="situation5">Повышение \n Ну.. Ваши интелектуальные способности привлекли внимание работодателя, и Вас повысили до зама директора компании, может, пора целиться в директоров? \n</string>
    <string name="ch51">1) Да, отличная идея \n</string>
    <string name="ch52">2) Не, мне и так хорошо \n</string>
    <string name="ch53">3) Лучше уволюсь и открою свой бизнес \n</string>
    <string name="situation6">Бизнес \n Поздравляю, Вы открыли свой бизнес, пора понять, на чем будете зарабатывать \n</string>
    <string name="ch61">1) Возглавить команду программистов \n</string>
    <string name="ch62">2) Открыть ресторан \n</string>
    <string name="ch63">3) Оформить патент на компьютерный миксер и наладить производство \n</string>
    <string name="situation7">Шире \n Появилсь возможность расширить бизнес, но есть риск падения \n</string>
    <string name="ch71">1) Отличная идея \n</string>
    <string name="ch72">2) Нет, лучше скромно, но надежно \n</string>
    <string name="ch73">3) Закрыть бизнес, и так денег до старости хватит \n</string>
    <string name="situation8">В политику или монополию? \n Вам позвонили: пригласили в политическую сферу, а потом в ГосДуму. Но у Вас только недавно появилась возможность стать монополистом.. \n</string>
    <string name="ch81">1) Принять политическое предложение \n</string>
    <string name="ch82">2) Создать монополию \n</string>
    <string name="ch83">3) Продолжить спокойное ведение бизнеса \n</string>
    <string name="situation9">Абсолютная Власть! \n Вы стали монополистом практически всех ресурсов планеты, теперь все на Земле зависит от Вас! \n</string>
    <string name="ch91">1) Править миром! \n</string>
    <string name="ch92">2) Быть в тени и ни в чем не нуждаться \n</string>
    <string name="ch93">3) Уничтожить Землю!! \n</string>
    <string name="situation10">Повышение \n Теперь Вы член ГосДумы, открыта возможность баллотироваться в президенты \n</string>
    <string name="ch101">1) Стать президентом \n</string>
    <string name="ch102">2) Остаться в ГосДуме \n</string>
    <string name="ch103">3) Уйти на пенсию в 35 лет \n</string>
    <string name="situation11">Президент \n Вас выбрали новым президентом, какая будет Ваша политика? \n</string>
    <string name="ch111">1) Мирное сосуществование стран \n</string>
    <string name="ch112">2) Создать могущественную армию и захватить мир! \n</string>
    <string name="ch113">3) Переселить человечество на другую планету \n</string>
    <string name="end12">Вы не окончили школу, не сдав даже ОГЭ. Это провал. Вы обречены на существование за счет родителей. Жизнь не удалась.</string>
    <string name="end43">А смысл было учиться? Вы от скуки поладили с наркотиками. Вы умерли от передоза.</string>
    <string name="end51">Вас повысили до директора компании. На этой должности Вы проработали до пенсии. Теперь Вы можете спокойно отдыхать со своим MERCEDES-BENZ C-CLASS в своем гараже</string>
    <string name="end52">До пенсии Вы так и проработали замом директора. больше че на TOYOTA RAV4 у вас бюджета не хватило</string>
    <string name="end72">К старости за счет скромного бизнеса Вы обеспечили деньгами два последующих поколения.. Но могло быть и лучше..</string>
    <string name="end73">Да, Вы умерли с деньгами, но ничего не оставили после себя.</string>
    <string name="end83">К старости благодаря широкому бизнесу Вы обеспечили деньгами еще 5 поеолений. Это хорошая старость</string>
    <string name="end91">Увы, но Землю посетили пришельцы, а Вас убили как самого разумного человека в мире.</string>
    <string name="end92">Прекрасная мафиозная политика, Ваши дети будут гордиться Вами, и дети Ваших детей, и дети детей Ваших детей..</string>
    <string name="end93">*ВЗРЫВ* Планета жестокости и коррупции уничтожена, пришельцы довольны</string>
    <string name="end102">О таком мечтают все. Ничего не надо делать и Вам за это платят. После смерти Вы завещали четыре MAYBACH своим детям и теще</string>
    <string name="end103">Устали? Понимаем. Вы умерли от избытка денег и акоголя в Вашем доме</string>
    <string name="end111">Благодаря Вашей мирной политике Вас израли Президентом мира. Но не на долго. Пришельцы колонизировали Землю и казнили ее лидера, т.е. Вас.</string>
    <string name="end112">Мир Ваш, сказать больше нечего.</string>
    <string name="end113">Вы погрузили все богптое население Земли в космический корабль и отправили на Нибиру, но местные жители не захотели принимать гостей и уничтожили корабль. Вы были на мостике уничтоженного корабля.</string>
    <string name="end_button">В меню</string>
</resources>
